@@ -255,6 +255,12 @@ Analysis options provide tools for analysing test output.
 
 
 analysis.add_option(
+    '--stop-on-error', '--stop', '-x', action="store_true",
+    dest='stop_on_error',
+    help="Stop running tests after first test failure or error."
+    )
+
+analysis.add_option(
     '--post-mortem', '--pdb', '-D', action="store_true", dest='post_mortem',
     help="Enable post-mortem debugging of test failures"
     )
